Archive2/04/cca6846f07947b/output
main.cpp:5:18: error: static_assert failed "Attempt to access the tail of an empty list."
    struct tail {static_assert(sizeof...(Args) != 0, "Attempt to access the tail of an empty list."); };
                 ^             ~~~~~~~~~~~~~~~~~~~~
main.cpp:24:14: note: in instantiation of member class 'List<>::tail' requested here
    l3::tail l4;  // uncomment for compile error
             ^
1 error generated.
1
